增加日志组件

--- a/jobber.d/goldbean.yaml
+++ b/jobber.d/goldbean.yaml
@@ -6,4 +6,5 @@ exchange:
 bindkey: goldbean.start_order.start
 consumer: xiangzhi
 workernum: 40
-url: "http://www.goldbea1.com"
+url: "http://127.0.0.1:8082/index.php"
+logpath: /Users/xiangzhi/Work/Go/src/gitlab.mydadao.com/marketing/logs/goldbean.log
