--- a/jobber.d/haoapple.yaml
+++ b/jobber.d/haoapple.yaml
@@ -6,4 +6,5 @@ exchange:
 bindkey: goldbean.end_order.start
 consumer: xiangzhi
 workernum: 40
-url: "http://www.haoapple.com"
+url: "http://127.0.0.1:8082/index.php"
+logpath: /Users/xiangzhi/Work/Go/src/gitlab.mydadao.com/marketing/logs/haoapple.log
